--- a/q/275165.html
+++ b/q/275165.html
@@ -26,16 +26,58 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>071</td><td>JavaScript Node.js</td><td>240827T011728Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275176#275176">l4m2</a></td></tr>
-<tr d-ix="1"><td>108</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
-<tr d-ix="2"><td>159</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
-<tr d-ix="3"><td>074</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
-<tr d-ix="4"><td>078</td><td>JavaScript ES10</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
+<tr d-ix="0"><td>069</td><td>JavaScript ES6</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
+<tr d-ix="1"><td>071</td><td>JavaScript Node.js</td><td>240827T011728Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275176#275176">l4m2</a></td></tr>
+<tr d-ix="2"><td>108</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
+<tr d-ix="3"><td>159</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
+<tr d-ix="4"><td>074</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
 <tr d-ix="5"><td>009</td><td>Vyxal</td><td>240826T212519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275169#275169">emanresu</a></td></tr>
 <tr d-ix="6"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
 <tr d-ix="7"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 69 bytes</h1>
+<p>Returns a flat list as a comma-separated string.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>f=([v,...a],b=v)=&gt;a.map((p,i)=&gt;[v,p,p,a[i+1]?v:i?[a[0],f(a,b)]:b])+&quot;&quot;
+</code></pre>
+<p><a href="https://tio.run/##ZYrNCsMgEITvfQxPK7HSXgM29O8NepM9rFaLxURpiq9vN@cyfAPDfG9qtPpPqt/9Up6h92jANqW1JlTONGlOpGeqAFUlHvxVDtk0HHFqY5os2QOqCKScxNGhHITovixryUHn8oIIVpxz8kEocSmO@1FmgVLu/qzNYK7MjblvVv8B" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<h3>Method</h3>
+<p>Given <span class="math-container">\$n\$</span> elements, we do <span class="math-container">\$n-1\$</span> iterations from <span class="math-container">\$j=0\$</span> to <span class="math-container">\$j=n-2\$</span>.</p>
+<p>At each iteration, we generate:</p>
+<ul>
+<li>all the pairs of the form <span class="math-container">\$\color{blue}{(j,k)},\:j&lt;k&lt;n\$</span></li>
+<li>interleaved with the pairs of the form <span class="math-container">\$\color{green}{(k,j)},\:j&lt;k&lt;n-1\$</span></li>
+<li>followed by the pair <span class="math-container">\$\color{purple}{(n-1,j+1)}\$</span> if <span class="math-container">\$j&lt;n-2\$</span> or <span class="math-container">\$\color{red}{(n-1,0)}\$</span> otherwise</li>
+</ul>
+<p>With five elements, this gives:</p>
+<p><span class="math-container">$$\begin{aligned}&amp;j=0:\color{blue}{(0,1)}\color{green}{(1,0)}\color{blue}{(0,2)}\color{green}{(2,0)}\color{blue}{(0,3)}\color{green}{(3,0)}\color{blue}{(0,4)}\color{purple}{(4,1)}\\
+&amp;j=1:\color{blue}{(1,2)}\color{green}{(2,1)}\color{blue}{(1,3)}\color{green}{(3,1)}\color{blue}{(1,4)}\color{purple}{(4,2)}\\
+&amp;j=2:\color{blue}{(2,3)}\color{green}{(3,2)}\color{blue}{(2,4)}\color{purple}{(4,3)}\\
+&amp;j=3:\color{blue}{(3,4)}\color{red}{(4,0)}\end{aligned}$$</span></p>
+<h3>Commented</h3>
+<pre class="lang-javascript prettyprint-override"><code>f = (             // f is a recursive function taking:
+  [ v,            //   v   = next element
+       ...a ],    //   a[] = remaining elements
+  b = v           //   b   = copy of the first element
+) =&gt;              //
+a.map((p, i) =&gt;   // for each element p at index i in a[]:
+  [               //
+    v, p,         //   insert the pair (v, p):
+    p,            //   insert the pair (p, X), where ...
+    a[i + 1] ?    //     if this is not the last element:
+      v           //       X = v
+    :             //     else:
+      i ?         //       if i &gt; 0:
+        [ a[0],   //         X = a[0] followed by
+          f(a, b) //         the result of a recursive call
+        ]         //
+      :           //       else (last iteration):
+        b         //         X = b
+  ]               //
+) + &quot;&quot;            // end of map(); coerce to a string
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([a,b,...x],y)=&gt;b?[[a,b],...y||f([b,...x]),[b,a],...f([a,...x],[])]:x
 </code></pre>
@@ -47,7 +89,7 @@
 <li>A-&gt;C-&gt;A, A-&gt;D-&gt;A, ...</li>
 </ul>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <S> 10 </s> 8 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <S> 10 </s> 8 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ŒcẎ;⁸,ƝQ
 </code></pre>
 <p>A monadic Link that accepts a list of names (lists of characters) and yields a list of pairs of names.</p>
@@ -62,7 +104,7 @@
        Q - deduplicate           -&gt; [[a,b],[b,a],[a,c],...,[a,Z],[Z,b],[b,c],...,[Y,Z],[Z,a]]
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1>Google Sheets, 159 bytes</h1>
+<div id="pu3" class="pu"><h1>Google Sheets, 159 bytes</h1>
 <pre><code>=let(a,1:1,s,&quot; &quot;,mid(trim(join(s,map(a,lambda(n,let(o,offset(n,,1,,99),r,ifna(filter(o,len(o))),join(s,sort(if(len(r),n&amp;s&amp;n&amp;s&amp;r&amp;s&amp;r,)))))))),2+len(a),9^9)&amp;s&amp;a)
 </code></pre>
 <p>Put the names in row <code>1</code> and the formula in cell <code>A2</code>.</p>
@@ -97,7 +139,7 @@ console.log(g([&quot;Alice&quot;,&quot;Bob&quot;,&quot;Cole&quot;,&quot;Dave&quo
 // &quot;Alice,Bob,Bob,Alice,Alice,Cole,Cole,Alice,Alice,Dave,Dave,Bob,Bob,Cole,Cole,Bob,Bob,Dave,Dave,Cole,Cole,Dave,Dave,Alice&quot;
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>88</s> 74 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>88</s> 74 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda L:sum([[a,a,b,b]for i,b in enumerate(L)for a in L[:i]],L[-1:])[:-1]
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=JYxBCkIhFEW34kwFHfxZCG0g3MHrDZ59JSH9H9NBa2kiRC2jfbSbECfnwuFwn5_9Ua9b7q9wPL9bDfrwO90ouZWYNfeWBAApUk45DFthUTkWM_O5JV-oemHl0DSkBRMRlQW9GJRg9ILz8buXmKsIAjhxxbgbuAysHKWcUe9z_w" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -125,52 +167,6 @@ def f(L):
 <p>The output format in this challenge requires a sequence of edges, not vertices. The loop with vertices <code>A B C D</code> has the edges <code>AB BC CD DA</code>, or equivalently <code>DA AB BC CD</code>. The flattened form <code>DAABBCCD</code> can be produced from <code>ABCD</code> by doubling each vertex and rotating right by one.</p>
 <p>In the actual code, we take the first list of two-element combinations, double both vertices in each combination, and then flatten and rotate the entire thing. For vertices A, B, C, D, the golfed code calculates <code>rotate_right(flatten([AABB, AACC, ..., CCDD]))</code> as<br />
 <code>all_but_last(D + AABB + AACC + ... + CCDD)</code>.</p>
-</div>
-<div id="pu4" class="pu"><h1>JavaScript (ES10), 78 bytes</h1>
-<p>Returns a flat array.</p>
-<pre class="lang-javascript prettyprint-override"><code>f=([v,...a],b=v)=&gt;v?[a.map((p,i)=&gt;[v,p,p,a[i+1]?v:i?a[0]:b]),f(a,b)].flat(2):a
-</code></pre>
-<p><a href="https://tio.run/##ZYrNCsIwEITvPoXktMG4qMdCLf69gbeQw6Y2kpJ2g5W8flyPIsM3MMw3UqGlf8X83s78GGoNLdhiEJGc8W3R7bF0lnCiDJBNlC13lpCNm73rShM7sjvXeKdNADJeOwyJ3nDQDdWe54XTgImfEMCqU4r9oIw6s5e@86ScxpHjDGqttF79@V9XuAhX4fbr1w8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Or <strong><a href="https://tio.run/##ZYrNCgIhFIX3PYarK2NSW8GkvzdoJy6upmE4ozTh69uddRy@A4fzvbHjGj65ffdLfcYxkgbbhZQSnfC6c33qBuWMDaCJTJPeRkGbp6MzXWWD9uCUd3yyIgEKz53CEeqy1hJlqS9IYNm55BCZYJfqqR91Zo7z3Z@1GcSVuBH3zRo/" rel="nofollow noreferrer">71 bytes (ES6)</a></strong> for a comma-separated string with some unsightly trailing commas.</p>
-<h3>Method</h3>
-<p>Given <span class="math-container">\$n\$</span> elements, we do <span class="math-container">\$n-1\$</span> iterations from <span class="math-container">\$j=0\$</span> to <span class="math-container">\$j=n-2\$</span>.</p>
-<p>At each iteration, we generate:</p>
-<ul>
-<li>all the pairs of the form <span class="math-container">\$\color{blue}{(j,k)},\:j&lt;k&lt;n\$</span></li>
-<li>interleaved with the pairs of the form <span class="math-container">\$\color{green}{(k,j)},\:j&lt;k&lt;n-1\$</span></li>
-<li>followed by the pair <span class="math-container">\$\color{purple}{(n-1,j+1)}\$</span> if <span class="math-container">\$j&lt;n-2\$</span> or <span class="math-container">\$\color{red}{(n-1,0)}\$</span> otherwise</li>
-</ul>
-<p>With five elements, this gives:</p>
-<p><span class="math-container">$$\begin{aligned}&amp;j=0:\color{blue}{(0,1)}\color{green}{(1,0)}\color{blue}{(0,2)}\color{green}{(2,0)}\color{blue}{(0,3)}\color{green}{(3,0)}\color{blue}{(0,4)}\color{purple}{(4,1)}\\
-&amp;j=1:\color{blue}{(1,2)}\color{green}{(2,1)}\color{blue}{(1,3)}\color{green}{(3,1)}\color{blue}{(1,4)}\color{purple}{(4,2)}\\
-&amp;j=2:\color{blue}{(2,3)}\color{green}{(3,2)}\color{blue}{(2,4)}\color{purple}{(4,3)}\\
-&amp;j=3:\color{blue}{(3,4)}\color{red}{(4,0)}\end{aligned}$$</span></p>
-<h3>Commented</h3>
-<pre class="lang-javascript prettyprint-override"><code>f = (               // f is a recursive function taking:
-  [ v,              //   v   = next element
-       ...a ],      //   a[] = remaining elements
-  b = v             //   b   = copy of the first element
-) =&gt;                //
-v ?                 // if v is defined:
-  [                 //
-    a.map((p, i) =&gt; //   for each element p at index i in a[]:
-      [             //
-        v, p,       //     insert the pair (v, p)
-        p,          //     insert the pair (p, X), where ...
-        a[i + 1] ?  //       if this is not the last element:
-          v         //         X = v
-        :           //       else:
-          i ?       //         if i &gt; 0:
-            a[0]    //           X = a[0]
-          :         //         else (last iteration):
-            b       //           X = b
-      ]             //
-    ),              //   end of map()
-    f(a, b)         //   append the result of a recursive call
-  ].flat(2)         //   flatten everything
-:                   // else:
-  a                 //   stop the recursion (a[] is empty)
-</code></pre>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
 <pre><code>KƛZṫwẊ;fǓ
