--- a/q/275165.html
+++ b/q/275165.html
@@ -26,22 +26,38 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>009</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
-<tr d-ix="1"><td>069</td><td>JavaScript ES6</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
-<tr d-ix="2"><td>071</td><td>JavaScript Node.js</td><td>240827T011728Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275176#275176">l4m2</a></td></tr>
-<tr d-ix="3"><td>108</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
-<tr d-ix="4"><td>159</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
-<tr d-ix="5"><td>074</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
-<tr d-ix="6"><td>009</td><td>Vyxal</td><td>240826T212519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275169#275169">emanresu</a></td></tr>
-<tr d-ix="7"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
-<tr d-ix="8"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
+<tr d-ix="0"><td>007</td><td>05AB1E</td><td>240827T071746Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275183#275183">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>009</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
+<tr d-ix="2"><td>069</td><td>JavaScript ES6</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
+<tr d-ix="3"><td>071</td><td>JavaScript Node.js</td><td>240827T011728Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275176#275176">l4m2</a></td></tr>
+<tr d-ix="4"><td>108</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
+<tr d-ix="5"><td>159</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
+<tr d-ix="6"><td>074</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
+<tr d-ix="7"><td>009</td><td>Vyxal</td><td>240826T212519Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275169#275169">emanresu</a></td></tr>
+<tr d-ix="8"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
+<tr d-ix="9"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 7 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>.Æ˜ìü2Ù
+</code></pre>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/275174/52210"><em>@JonathanAllan</em>'s Jelly answer</a>, so make sure to upvote that answer as well!</p>
+<p><a href="https://tio.run/##yy9OTMpM/f9f73Db6TmH1xzeY3R45v//0UqJSjpKSUCcrBQLAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfaXLf73DbafnHF5zeI/R4Zn/dQ5ts/8fHa2UqKSjlKQUq6MAY@ooJaNzdZRSgDgVIuyYk5mcCuQ65YMkQ/JzlWJjAQ" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>.Æ       # Create all possible pairs of the (implicit) input-list
+  ˜      # Flatten it
+   ì     # Prepend-merge it in front of the (implicit) input-list
+    ü2   # Pop and push all overlapping pairs
+      Ù  # Uniquify this list of pairs
+         # (after which the result is output implicitly)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>á2 c ã2 â
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=4TIgYyDjMiDi&amp;input=WzAgMSAyIDNdCi1R" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 69 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES6), 69 bytes</h1>
 <p>Expects an array of strings and returns a flat list as a comma-separated string.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([v,...a],b=v)=&gt;a.map((p,i)=&gt;[v,p,p,a[i+1]?v:i?[a[0],f(a,b)]:b])+&quot;&quot;
@@ -85,7 +101,7 @@ a.map((p, i) =&gt;   // for each element p at index i in a[]:
 + &quot;&quot;              // coerce to a string
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([a,b,...x],y)=&gt;b?[[a,b],...y||f([b,...x]),[b,a],...f([a,...x],[])]:x
 </code></pre>
@@ -97,7 +113,7 @@ a.map((p, i) =&gt;   // for each element p at index i in a[]:
 <li>A-&gt;C-&gt;A, A-&gt;D-&gt;A, ...</li>
 </ul>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <S> 10 </s> 8 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <S> 10 </s> 8 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ŒcẎ;⁸,ƝQ
 </code></pre>
 <p>A monadic Link that accepts a list of names (lists of characters) and yields a list of pairs of names.</p>
@@ -112,7 +128,7 @@ a.map((p, i) =&gt;   // for each element p at index i in a[]:
        Q - deduplicate           -&gt; [[a,b],[b,a],[a,c],...,[a,Z],[Z,b],[b,c],...,[Y,Z],[Z,a]]
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1>Google Sheets, 159 bytes</h1>
+<div id="pu5" class="pu"><h1>Google Sheets, 159 bytes</h1>
 <pre><code>=let(a,1:1,s,&quot; &quot;,mid(trim(join(s,map(a,lambda(n,let(o,offset(n,,1,,99),r,ifna(filter(o,len(o))),join(s,sort(if(len(r),n&amp;s&amp;n&amp;s&amp;r&amp;s&amp;r,)))))))),2+len(a),9^9)&amp;s&amp;a)
 </code></pre>
 <p>Put the names in row <code>1</code> and the formula in cell <code>A2</code>.</p>
@@ -147,7 +163,7 @@ console.log(g([&quot;Alice&quot;,&quot;Bob&quot;,&quot;Cole&quot;,&quot;Dave&quo
 // &quot;Alice,Bob,Bob,Alice,Alice,Cole,Cole,Alice,Alice,Dave,Dave,Bob,Bob,Cole,Cole,Bob,Bob,Dave,Dave,Cole,Cole,Dave,Dave,Alice&quot;
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>88</s> 74 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>88</s> 74 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda L:sum([[a,a,b,b]for i,b in enumerate(L)for a in L[:i]],L[-1:])[:-1]
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=JYxBCkIhFEW34kwFHfxZCG0g3MHrDZ59JSH9H9NBa2kiRC2jfbSbECfnwuFwn5_9Ua9b7q9wPL9bDfrwO90ouZWYNfeWBAApUk45DFthUTkWM_O5JV-oemHl0DSkBRMRlQW9GJRg9ILz8buXmKsIAjhxxbgbuAysHKWcUe9z_w" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -176,7 +192,7 @@ def f(L):
 <p>In the actual code, we take the first list of two-element combinations, double both vertices in each combination, and then flatten and rotate the entire thing. For vertices A, B, C, D, the golfed code calculates <code>rotate_right(flatten([AABB, AACC, ..., CCDD]))</code> as<br />
 <code>all_but_last(D + AABB + AACC + ... + CCDD)</code>.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 9 bytes</h1>
 <pre><code>KƛZṫwẊ;fǓ
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyIiLCIiLCJLxpta4bmrd+G6ijtmx5MiLCIiLCJbXCJhXCIsXCJiXCIsXCJjXCIsXCJkXCIsXCJlXCJdIl0=" rel="nofollow noreferrer">Try it Online!</a>
@@ -201,7 +217,7 @@ Port of Neil's Charcoal answer.</p>
           ∩≈   # Has all elements equal?
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 18 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 18 bytes</h1>
 <pre><code>Φ⭆θ⭆…θκ⁺×²λ×²ικ§θ⁰
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMMtM6cktUgjuATIS/dNLNAo1FFAcJwrk3NSnTPywcLZmjoKATmlxRohmbmpxRpGOgo5QBE4J1MTCECqNK25IGY7lnjmpaRWgPQaAEX//09MSk5J/a9blgMA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: <a href="https://oeis.org/A097285" rel="nofollow noreferrer">A097285</a> is almost the sequence of indices, with each element doubled, except that there is only one of the first element at the start, the second coming at the end.</p>
@@ -219,7 +235,7 @@ Port of Neil's Charcoal answer.</p>
 Φ             κ§θ⁰  Remove the first element and append it to the end
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 23 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/DennisMitchell/jellylanguage" rel="nofollow noreferrer">Jelly</a>, 23 bytes</h1>
 <pre><code>2œṖ$ÐƤṖUp/€żUẎṖƲ€Ẏ;Uṡ2Ɗ
 </code></pre>
 <p><a href="https://jht.hyper-neutrino.xyz/tio#WyIiLCIyxZPhuZYkw5DGpOG5llVwL+KCrMW8VeG6juG5lsay4oKs4bqOO1XhuaEyxooiLCLDh8WS4bmYIiwiIixbIlwiYWJjZFwiIl1d" rel="nofollow noreferrer">Try It Online!</a></p>
