--- a/q/275165.html
+++ b/q/275165.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>007</td><td>05AB1E</td><td>240827T071746Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275183#275183">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>009</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
-<tr d-ix="2"><td>069</td><td>JavaScript ES6</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
-<tr d-ix="3"><td>071</td><td>JavaScript Node.js</td><td>240827T011728Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275176#275176">l4m2</a></td></tr>
+<tr d-ix="0"><td>067</td><td>or</td><td>240827T011728Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275176#275176">l4m2</a></td></tr>
+<tr d-ix="1"><td>007</td><td>05AB1E</td><td>240827T071746Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275183#275183">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>009</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
+<tr d-ix="3"><td>069</td><td>JavaScript ES6</td><td>240826T210254Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275167#275167">Arnauld</a></td></tr>
 <tr d-ix="4"><td>108</td><td>Jelly</td><td>240827T001136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275174#275174">Jonathan</a></td></tr>
 <tr d-ix="5"><td>159</td><td>Google Sheets</td><td>240826T231658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275173#275173">doubleun</a></td></tr>
 <tr d-ix="6"><td>074</td><td>Python</td><td>240826T215815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275172#275172">shape wa</a></td></tr>
@@ -37,7 +37,20 @@
 <tr d-ix="8"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
 <tr d-ix="9"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 7 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zVYjOlEnSUdPT68iVqdS09YuyR4mUFlTk6YRDZXTBIolgphpIA0Q5dGxmrFWFf@T8/OK83NS9XLy0zWAskqOOZnJqUo6Sk75SUAyJD9XKVZTkwtDFUgFEDsDsQsQu4JU/QcA" rel="nofollow noreferrer">or 67 bytes flatten</a></p>
+<h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=([a,b,...x],y)=&gt;b?[[a,b],...y||f([b,...x]),[b,a],...f([a,...x],[])]:x
+</code></pre>
+<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zVYjOlEnSUdPT68iVqdS09YuyT4aJBILEqqsqUnTiIbKauoAWYlg8TSQJoiW6FjNWKuK/8n5ecX5Oal6OfnpGkBZJceczORUJR0lp/wkIBmSn6sUq6nJhaEKpAKInYHYBYhdQar@AwA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<ul>
+<li>A-&gt;B</li>
+<li>f(ALL-A)</li>
+<li>B-&gt;A</li>
+<li>A-&gt;C-&gt;A, A-&gt;D-&gt;A, ...</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 7 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>.Æ˜ìü2Ù
 </code></pre>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/275174/52210"><em>@JonathanAllan</em>'s Jelly answer</a>, so make sure to upvote that answer as well!</p>
@@ -52,12 +65,12 @@
          # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>á2 c ã2 â
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=4TIgYyDjMiDi&amp;input=WzAgMSAyIDNdCi1R" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu2" class="pu"><h1>JavaScript (ES6), 69 bytes</h1>
+<div id="pu3" class="pu"><h1>JavaScript (ES6), 69 bytes</h1>
 <p>Expects an array of strings and returns a flat list as a comma-separated string.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([v,...a],b=v)=&gt;a.map((p,i)=&gt;[v,p,p,a[i+1]?v:i?[a[0],f(a,b)]:b])+&quot;&quot;
@@ -101,23 +114,11 @@ a.map((p, i) =&gt;   // for each element p at index i in a[]:
 + &quot;&quot;              // coerce to a string
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 71 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>f=([a,b,...x],y)=&gt;b?[[a,b],...y||f([b,...x]),[b,a],...f([a,...x],[])]:x
-</code></pre>
-<p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/zVYjOlEnSUdPT68iVqdS09YuyT4aJBILEqqsqUnTiIbKauoAWYlg8TSQJoiW6FjNWKuK/8n5ecX5Oal6OfnpGkBZJceczORUJR0lp/wkIBmSn6sUq6nJhaEKpAKInYHYBYhdQar@AwA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<ul>
-<li>A-&gt;B</li>
-<li>f(ALL-A)</li>
-<li>B-&gt;A</li>
-<li>A-&gt;C-&gt;A, A-&gt;D-&gt;A, ...</li>
-</ul>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <S> 10 </s> 8 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="noreferrer">Jelly</a>, <S> 10 </s> 8 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="noreferrer">bytes</a></h1>
 <pre><code>ŒcẎ;⁸,ƝQ
 </code></pre>
 <p>A monadic Link that accepts a list of names (lists of characters) and yields a list of pairs of names.</p>
-<p><strong><a href="https://tio.run/##y0rNyan8///opOSHu/qsHzXu0Dk2N/D/4Xb3//@jlRxzMpNTlXQUlJzyk0CUc0ZiUU4mWMQlsQxMuwKpWAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+<p><strong><a href="https://tio.run/##y0rNyan8///opOSHu/qsHzXu0Dk2N/D/4Xb3//@jlRxzMpNTlXQUlJzyk0CUc0ZiUU4mWMQlsQxMuwKpWAA" rel="noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
 <h4>How?</h4>
 <pre><code>ŒcẎ;⁸,ƝQ - Link: Names
 Œc       - ordered pairs {Names} -&gt; [[a,b],[a,c],...,[a,Z],[b,c],...[Y,Z]]
