--- a/q/275165.html
+++ b/q/275165.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>142</td><td>Oracle SQL 11.2</td><td>240828T151244Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275207#275207">Jeto</a></td></tr>
+<tr d-ix="0"><td>132</td><td>C clang</td><td>240828T135743Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275205#275205">jdt</a></td></tr>
 <tr d-ix="1"><td>009</td><td>Japt</td><td>240827T064722Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275182#275182">Shaggy</a></td></tr>
 <tr d-ix="2"><td>066</td><td>R</td><td>240827T191400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275194#275194">David Jo</a></td></tr>
 <tr d-ix="3"><td>049</td><td>Ruby</td><td>240827T170409Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275190#275190">Jordan</a></td></tr>
@@ -42,22 +42,11 @@
 <tr d-ix="13"><td>018</td><td>Charcoal</td><td>240826T210607Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275168#275168">Neil</a></td></tr>
 <tr d-ix="14"><td>023</td><td>Jelly</td><td>240826T191846Z</td><td><a href="https://codegolf.stackexchange.com/questions/275165/completely-introduce-your-friends/275166#275166">hyper-ne</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Oracle SQL 11.2, 142 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 132 bytes</h1>
 
-<pre class="lang-sql prettyprint-override"><code>WITH v AS(SELECT REGEXP_SUBSTR(:1,'[^,]+',1,LEVEL)f FROM DUAL CONNECT BY INSTR(:1,',',1,LEVEL-1)&gt;0)SELECT a.f,b.f FROM v a,v b WHERE a.f!=b.f;
+<pre class="lang-c prettyprint-override"><code>w[2],i,j;f(**s,n){int p[99]={};j=n-1;for(i=0;i&lt;n;i++){*w=i*8+j;wcsstr(p,w)||i-j&amp;&amp;(wcscat(p,w),printf(&quot;%s %s\n&quot;,s[j],s[j=i]),i=-1);}}
 </code></pre>
-<p>Un-golfed</p>
-<pre class="lang-sql prettyprint-override"><code>WITH v AS
- ( -- Split firstnames on comma
-   SELECT REGEXP_SUBSTR(:1,'[^,]+',1,LEVEL) f 
-   FROM DUAL 
-   CONNECT BY INSTR(:1,',',1,LEVEL-1)&gt;0
- ) 
-SELECT a.f, b.f
-FROM v a,v b    -- Create a cartesian between 2 instances of the firstnames list
-WHERE a.f!=b.f  -- Exclude result if firstname is paired with itself
-;
-</code></pre>
+<p><a href="https://tio.run/##hZDLboMwEEX3@YqRpUQ2MWp4LBq5XvT1FZQFdSE1og7CpEgl/HqpgbIwaVQvZuTrsc@RhSuKRB36von8mEqasww7jqaKtFLVUEb7fczbjuVcuR7LjhWWfMfknWJyuyWt03Dp3G5z1git6wqXtCHns3TzzQabSCT1GNGyMq9lGK01rPWLQlRHeTwULmNCJXc9wrquH5AfiVSYQLtagVkmcaBOde1FMXBoASWIAnpF0LF5ALT8Sj1zOvRjhsdxAjfz3pmCaf73mE6XCIMxLU@1xgiZGZvqL6imiAu0b6P9Jdq30P6E9q@gbX4w8@8LKdIB/3AcLR7fk6qQY/KUfI792bSlWmCrBUu1wFILJrXgv18J//oVU96GMrpkFyahbRIuTULLJJxMwismVVqfKgU7tur6b5EVyUH3bvMD" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a>, <s>11</s> 9 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>à2 c
